added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3 class="bold">lorem er golpo</h3>
+        <p id="box">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deserunt labore voluptates sapiente <span class="one">dolorem</span>, quos eum placeat exercitationem tempora officia velit non reprehenderit harum saepe nisi! Aliquam accusamus perferendis suscipit.
+        </p>
+    </div>
 </body>
 </html>
